# open-simplex-noise-in-c

./: CMakeLists.txt  README.md  nodelet_open_simplex_noise.xml  package.xml
cfg/: OpenSimplexNoise.cfg
include/open_simplex_noise_ros/: open_simplex_noise.h
src/: open-simplex-noise.c  open_simplex_noise.cpp  open_simplex_noise_node.cpp
